--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,8 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  font-size: larger;
+  width: 5rem;
 }
 
 .past {
@@ -54,7 +56,7 @@ textarea {
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
@@ -68,4 +70,8 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+input {
+  width: 60rem;
 }
